body overflow in mobile resolved

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body{
 }
 #root{
     overflow-x: hidden;
+    position: relative;
 }
 @media(max-width:1023px){
     .favouritestays,.template,.whystay{
